# swagger.yaml
@@ -50,8 +50,8 @@ paths:
     post:
       tags:
         - User
-      security:
-        - basicAuth: []
+#      security:
+#        - basicAuth: []
       summary: Log user into the system
       description: Create a new session for an existing user
       responses:
@@ -61,8 +61,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/User'
-        '412':
-          description: Invalid input data
+
         '401':
           description: User not authenticated
           
@@ -301,7 +300,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/User'
+              $ref: '#/components/schemas/Booking'
       responses:
         '200':
           description: The booking data was successfully updated
@@ -694,6 +693,7 @@ components:
           type: string
           example: m.anderson@gmail.com
         password:
+          writeOnly: true
           type: string
           format: password 
           example: dvknmwpkd254v
@@ -786,6 +786,10 @@ components:
           type: number
           format: float
           example: 22.4
+        Booking_id:
+          type: integer
+          format: int64
+          example: 12
           
     Boarding_check:
       type: object
